--- a/vercel.json
+++ b/vercel.json
@@ -4,13 +4,13 @@
       {
         "src": "gauX/wsgi.py",
         "use": "@vercel/python",
-        "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" , "installCommand": "pip install -r requirements.txt",
-        "buildCommand": "python manage.py collectstatic --noinput"}
+        "config": { "maxLambdaSize": "15mb", "runtime": "python3.9"}
       },
       {
         "src": "build_files.sh",
         "use": "@vercel/static-build",
         "config": {
+          "cmd": "pip install -r requirements.txt && python manage.py collectstatic",
           "distDir": "staticfiles_build"
         }
       }
