--- a/vercel.json
+++ b/vercel.json
@@ -1,28 +1,22 @@
 {
-    "version": 2,
-    "builds": [
+  "builds": [{
+      "src": "gauX/wsgi.py",
+      "use": "@vercel/python",
+      "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
+  },
+  {
+      "src": "build_files.sh",
+      "use": "@vercel/static-build",
+      "config": { "distDir": "staticfiles_build" }
+  }],
+  "routes": [
       {
-        "src": "gauX/manage.py",
-        "use": "@vercel/python",
-        "config": { "maxLambdaSize": "15mb", "runtime": "python3.9"}
+          "src": "/static/(.*)",
+          "dest": "/static/$1"
       },
       {
-        "src": "build_files.sh",
-        "use": "@vercel/static-build",
-        "config": {
-          "cmd": "pip install -r requirements.txt && python manage.py collectstatic",
-          "distDir": "staticfiles_build"
-        }
+          "src": "/(.*)",
+          "dest": "gauX/wsgi.py"
       }
-    ],
-    "routes": [
-      {
-        "src": "/static/(.*)",
-        "dest": "/static/$1"
-      },
-      {
-        "src": "/(.*)",
-        "dest": "gauX/wsgi.py"
-      }
-    ]
-  }
+  ]
+}
