--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "builds": [{
         "src": "gauX/wsgi.py",
         "use": "@vercel/python",
-        "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
+        "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" , "buildCommand": "python setup.py build_ext --pg-config /path/to/pg_config build"}
     }],
     "routes": [
         {
